--- a/src/classes/ExceptionHandling.cls
+++ b/src/classes/ExceptionHandling.cls
@@ -2,7 +2,7 @@
 * Description   - ExceptionHandling
 * Created by    - Sagar Nirwal
 * Created Date  - 10/07/2022
-* Revision log  -  V_1.0 - Created  - Your Name - Date
+* Revision log  -  V_1.0 - Created  - Sagar Nirwal - 10/07/2022
 *                  V_1.1 - Modified - Your Name - Date - Modified
 **/
 public virtual class ExceptionHandling {
@@ -10,7 +10,7 @@ public virtual class ExceptionHandling {
     *     Created By  :   Sagar Nirwal
     *     Arguments   :   None
     *     Return      :   void
-    *     Revision log:   V_1.0 - Created  - Youe name - Date
+    *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 10/07/2022
     *                     V_1.1 - Modified - Youe Name - Date - Details what you modified 
     **/
     public ExceptionHandling(){}
@@ -18,7 +18,7 @@ public virtual class ExceptionHandling {
     * Description   - Snippet
     * Created by    - Sagar Nirwal
     * Created Date  - 10/07/2022
-    * Revision log  -  V_1.0 - Created  - Your Name - Date
+    * Revision log  -  V_1.0 - Created  - Sagar Nirwal - 10/07/2022
     *                  V_1.1 - Modified - Your Name - Date - Modified
     **/
     public virtual class Snippet extends ExceptionHandling{
@@ -26,7 +26,7 @@ public virtual class ExceptionHandling {
         *     Created By  :   Sagar Nirwal
         *     Arguments   :   None
         *     Return      :   void
-        *     Revision log:   V_1.0 - Created  - Youe name - Date
+        *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 10/07/2022
         *                     V_1.1 - Modified - Youe Name - Date - Details what you modified 
         **/
         public Snippet(){
@@ -61,7 +61,7 @@ public virtual class ExceptionHandling {
     * Description   - Stream
     * Created by    - Sagar Nirwal
     * Created Date  - 10/07/2022
-    * Revision log  -  V_1.0 - Created  - Your Name - Date
+    * Revision log  -  V_1.0 - Created  - Sagar Nirwal - 10/07/2022
     *                  V_1.1 - Modified - Your Name - Date - Modified
     **/
     public virtual class Stream extends ExceptionHandling {
@@ -69,7 +69,7 @@ public virtual class ExceptionHandling {
         *     Created By  :   Sagar Nirwal
         *     Arguments   :   None
         *     Return      :   void
-        *     Revision log:   V_1.0 - Created  - Youe name - Date
+        *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 10/07/2022
         *                     V_1.1 - Modified - Youe Name - Date - Details what you modified 
         **/
         public Stream(){
