--- a/src/classes/Record.cls
+++ b/src/classes/Record.cls
@@ -2,7 +2,7 @@
 * Description   - Record
 * Created by    - Sagar Nirwal
 * Created Date  - 09/07/2022
-* Revision log  -  V_1.0 - Created  - Your Name - Date
+* Revision log  -  V_1.0 - Created  - Sagar Nirwal - 09/07/2022
 *                  V_1.1 - Modified - Your Name - Date - Modified
 **/
 public with sharing class Record {
@@ -10,7 +10,7 @@ public with sharing class Record {
     *     Created By  :   Sagar Nirwal
     *     Arguments   :   None
     *     Return      :   void
-    *     Revision log:   V_1.0 - Created  - Youe name - Date
+    *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 09/07/2022
     *                     V_1.1 - Modified - Youe Name - Date - Details what you modified 
     **/
     public static void recordDML150() {
@@ -68,7 +68,7 @@ public with sharing class Record {
     *     Created By  :   Sagar Nirwal
     *     Arguments   :   None
     *     Return      :   void
-    *     Revision log:   V_1.0 - Created  - Youe name - Date
+    *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 09/07/2022
     *                     V_1.1 - Modified - Youe Name - Date - Details what you modified 
     **/
     public static void recordToDatabase(){
@@ -127,7 +127,7 @@ public with sharing class Record {
     *     Created By  :   Sagar Nirwal
     *     Arguments   :   None
     *     Return      :   void
-    *     Revision log:   V_1.0 - Created  - Youe name - Date
+    *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 09/07/2022
     *                     V_1.1 - Modified - Youe Name - Date - Details what you modified 
     **/
     public static void collectionmethod(){
